// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AboutLeadBlock tests should not render if no awardsAndCertificate images and document assets are provided 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-11fgxps-MuiGrid2-root"
    data-testid="grid-container"
  >
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-lg-8 MuiGrid2-grid-xs-12 css-vhjime-MuiGrid2-root"
      data-testid="grid-item"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
        data-testid="typography"
      >
        <div
          class="MuiTypography-root MuiTypography-body1  css-87ejlm-MuiTypography-root"
          data-testid="typography"
        >
          system-desc
        </div>
      </p>
      <p
        class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
        data-testid="typography"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-1wzmdv9-MuiTypography-root"
          data-testid="guarentees-section"
        >
          MC: pdp.leadBlock.guaranteesWarranties
        </h6>
        <img
          alt="asset-name"
          class="AboutLeadBlock-image"
          data-testid="guarantee-image-asset-name"
          src="http://localhost:8000/asset-real-file-name.pdf"
        />
      </p>
      <p
        class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
        data-testid="typography"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-1wzmdv9-MuiTypography-root"
          data-testid="specification-section"
        >
          MC: sdp.leadBlock.specification
        </h6>
        <a
          class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1ga0prt-MuiButtonBase-root-MuiButton-root"
          data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"asset-name\\",\\"action\\":\\"http://localhost:8000/asset-real-file-name.pdf\\"}"
          href="http://localhost:8000/asset-real-file-name.pdf"
          rel="noopener noreferrer"
          tabindex="0"
          target="_blank"
        >
          asset-name
          <span
            class="MuiButton-endIcon MuiButton-iconSizeMedium css-9tj150-MuiButton-endIcon"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="LaunchIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </a>
      </p>
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-lg-4 MuiGrid2-grid-xs-12 Grid-item css-abxfb-MuiGrid2-root"
      data-testid="sidebar"
    >
      <div
        class="ColorPair-pearl css-1pt14k0"
      >
        <div
          class="css-qtgtj9"
        >
          <div
            class="css-wepxue"
          >
            <h4
              class="MuiTypography-root MuiTypography-h4 Typography-underline css-1ekntu4-MuiTypography-root"
              data-testid="typography"
            >
              MC: sdp.leadBlock.systemBenefits
            </h4>
            <div
              class="css-1xaekgw"
            >
              <ul
                class="css-1err4t"
              />
            </div>
          </div>
          <div
            class="css-wepxue"
          >
            <h4
              class="MuiTypography-root MuiTypography-h4 Typography-underline css-1ekntu4-MuiTypography-root"
              data-testid="typography"
            >
              siderBarItem
            </h4>
            <div
              class="css-1xaekgw"
            >
              <div
                class="RichText-root css-17t4j5c"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AboutLeadBlock tests should not render if no guaranteesAndWarranties assets 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-11fgxps-MuiGrid2-root"
    data-testid="grid-container"
  >
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-lg-8 MuiGrid2-grid-xs-12 css-vhjime-MuiGrid2-root"
      data-testid="grid-item"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
        data-testid="typography"
      >
        <div
          class="MuiTypography-root MuiTypography-body1  css-87ejlm-MuiTypography-root"
          data-testid="typography"
        >
          system-desc
        </div>
      </p>
      <p
        class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
        data-testid="typography"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-1wzmdv9-MuiTypography-root"
          data-testid="guarentees-section"
        >
          MC: pdp.leadBlock.guaranteesWarranties
        </h6>
        <img
          alt="asset-name"
          class="AboutLeadBlock-image"
          data-testid="guarantee-image-asset-name"
          src="http://localhost:8000/asset-real-file-name.pdf"
        />
      </p>
      <p
        class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
        data-testid="typography"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-1wzmdv9-MuiTypography-root"
          data-testid="specification-section"
        >
          MC: sdp.leadBlock.specification
        </h6>
        <a
          class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1ga0prt-MuiButtonBase-root-MuiButton-root"
          data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"asset-name\\",\\"action\\":\\"http://localhost:8000/asset-real-file-name.pdf\\"}"
          href="http://localhost:8000/asset-real-file-name.pdf"
          rel="noopener noreferrer"
          tabindex="0"
          target="_blank"
        >
          asset-name
          <span
            class="MuiButton-endIcon MuiButton-iconSizeMedium css-9tj150-MuiButton-endIcon"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="LaunchIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </a>
      </p>
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-lg-4 MuiGrid2-grid-xs-12 Grid-item css-abxfb-MuiGrid2-root"
      data-testid="sidebar"
    >
      <div
        class="ColorPair-pearl css-1pt14k0"
      >
        <div
          class="css-qtgtj9"
        >
          <div
            class="css-wepxue"
          >
            <h4
              class="MuiTypography-root MuiTypography-h4 Typography-underline css-1ekntu4-MuiTypography-root"
              data-testid="typography"
            >
              MC: sdp.leadBlock.systemBenefits
            </h4>
            <div
              class="css-1xaekgw"
            >
              <ul
                class="css-1err4t"
              />
            </div>
          </div>
          <div
            class="css-wepxue"
          >
            <h4
              class="MuiTypography-root MuiTypography-h4 Typography-underline css-1ekntu4-MuiTypography-root"
              data-testid="typography"
            >
              siderBarItem
            </h4>
            <div
              class="css-1xaekgw"
            >
              <div
                class="RichText-root css-17t4j5c"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AboutLeadBlock tests should not render if no keyFeatures 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-11fgxps-MuiGrid2-root"
    data-testid="grid-container"
  >
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-lg-8 MuiGrid2-grid-xs-12 css-vhjime-MuiGrid2-root"
      data-testid="grid-item"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
        data-testid="typography"
      >
        <div
          class="MuiTypography-root MuiTypography-body1  css-87ejlm-MuiTypography-root"
          data-testid="typography"
        >
          system-desc
        </div>
      </p>
      <p
        class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
        data-testid="typography"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-1wzmdv9-MuiTypography-root"
          data-testid="guarentees-section"
        >
          MC: pdp.leadBlock.guaranteesWarranties
        </h6>
        <img
          alt="asset-name"
          class="AboutLeadBlock-image"
          data-testid="guarantee-image-asset-name"
          src="http://localhost:8000/asset-real-file-name.pdf"
        />
      </p>
      <p
        class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
        data-testid="typography"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-1wzmdv9-MuiTypography-root"
          data-testid="awards-section"
        >
          MC: pdp.leadBlock.awardsCertificates
        </h6>
        <img
          alt="asset-name"
          class="AboutLeadBlock-image"
          src="http://localhost:8000/asset-real-file-name.pdf"
        />
        <img
          alt="asset-name"
          class="AboutLeadBlock-image"
          src="http://localhost:8000/asset-real-file-name.pdf"
        />
      </p>
      <p
        class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
        data-testid="typography"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-1wzmdv9-MuiTypography-root"
          data-testid="specification-section"
        >
          MC: sdp.leadBlock.specification
        </h6>
        <a
          class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1ga0prt-MuiButtonBase-root-MuiButton-root"
          data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"asset-name\\",\\"action\\":\\"http://localhost:8000/asset-real-file-name.pdf\\"}"
          href="http://localhost:8000/asset-real-file-name.pdf"
          rel="noopener noreferrer"
          tabindex="0"
          target="_blank"
        >
          asset-name
          <span
            class="MuiButton-endIcon MuiButton-iconSizeMedium css-9tj150-MuiButton-endIcon"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="LaunchIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </a>
      </p>
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-lg-4 MuiGrid2-grid-xs-12 Grid-item css-abxfb-MuiGrid2-root"
      data-testid="sidebar"
    >
      <div
        class="ColorPair-pearl css-1pt14k0"
      >
        <div
          class="css-qtgtj9"
        >
          <div
            class="css-wepxue"
          >
            <h4
              class="MuiTypography-root MuiTypography-h4 Typography-underline css-1ekntu4-MuiTypography-root"
              data-testid="typography"
            >
              MC: sdp.leadBlock.systemBenefits
            </h4>
            <div
              class="css-1xaekgw"
            >
              <ul
                class="css-1err4t"
              />
            </div>
          </div>
          <div
            class="css-wepxue"
          >
            <h4
              class="MuiTypography-root MuiTypography-h4 Typography-underline css-1ekntu4-MuiTypography-root"
              data-testid="typography"
            >
              siderBarItem
            </h4>
            <div
              class="css-1xaekgw"
            >
              <div
                class="RichText-root css-17t4j5c"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AboutLeadBlock tests should not render if no keyFeatures and systemBenefits 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-11fgxps-MuiGrid2-root"
    data-testid="grid-container"
  >
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-lg-8 MuiGrid2-grid-xs-12 css-vhjime-MuiGrid2-root"
      data-testid="grid-item"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
        data-testid="typography"
      >
        <div
          class="MuiTypography-root MuiTypography-body1  css-87ejlm-MuiTypography-root"
          data-testid="typography"
        >
          system-desc
        </div>
      </p>
      <p
        class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
        data-testid="typography"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-1wzmdv9-MuiTypography-root"
          data-testid="guarentees-section"
        >
          MC: pdp.leadBlock.guaranteesWarranties
        </h6>
        <img
          alt="asset-name"
          class="AboutLeadBlock-image"
          data-testid="guarantee-image-asset-name"
          src="http://localhost:8000/asset-real-file-name.pdf"
        />
      </p>
      <p
        class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
        data-testid="typography"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-1wzmdv9-MuiTypography-root"
          data-testid="awards-section"
        >
          MC: pdp.leadBlock.awardsCertificates
        </h6>
        <img
          alt="asset-name"
          class="AboutLeadBlock-image"
          src="http://localhost:8000/asset-real-file-name.pdf"
        />
        <img
          alt="asset-name"
          class="AboutLeadBlock-image"
          src="http://localhost:8000/asset-real-file-name.pdf"
        />
      </p>
      <p
        class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
        data-testid="typography"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-1wzmdv9-MuiTypography-root"
          data-testid="specification-section"
        >
          MC: sdp.leadBlock.specification
        </h6>
        <a
          class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1ga0prt-MuiButtonBase-root-MuiButton-root"
          data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"asset-name\\",\\"action\\":\\"http://localhost:8000/asset-real-file-name.pdf\\"}"
          href="http://localhost:8000/asset-real-file-name.pdf"
          rel="noopener noreferrer"
          tabindex="0"
          target="_blank"
        >
          asset-name
          <span
            class="MuiButton-endIcon MuiButton-iconSizeMedium css-9tj150-MuiButton-endIcon"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="LaunchIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </a>
      </p>
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-lg-4 MuiGrid2-grid-xs-12 Grid-item css-abxfb-MuiGrid2-root"
      data-testid="sidebar"
    >
      <div
        class="ColorPair-pearl css-1pt14k0"
      >
        <div
          class="css-qtgtj9"
        >
          <div
            class="css-wepxue"
          >
            <h4
              class="MuiTypography-root MuiTypography-h4 Typography-underline css-1ekntu4-MuiTypography-root"
              data-testid="typography"
            >
              siderBarItem
            </h4>
            <div
              class="css-1xaekgw"
            >
              <div
                class="RichText-root css-17t4j5c"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AboutLeadBlock tests should not render if no siderbar, keyFeatures and systemBenefits 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-11fgxps-MuiGrid2-root"
    data-testid="grid-container"
  >
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-lg-8 MuiGrid2-grid-xs-12 css-vhjime-MuiGrid2-root"
      data-testid="grid-item"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
        data-testid="typography"
      >
        <div
          class="MuiTypography-root MuiTypography-body1  css-87ejlm-MuiTypography-root"
          data-testid="typography"
        >
          system-desc
        </div>
      </p>
      <p
        class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
        data-testid="typography"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-1wzmdv9-MuiTypography-root"
          data-testid="guarentees-section"
        >
          MC: pdp.leadBlock.guaranteesWarranties
        </h6>
        <img
          alt="asset-name"
          class="AboutLeadBlock-image"
          data-testid="guarantee-image-asset-name"
          src="http://localhost:8000/asset-real-file-name.pdf"
        />
      </p>
      <p
        class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
        data-testid="typography"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-1wzmdv9-MuiTypography-root"
          data-testid="awards-section"
        >
          MC: pdp.leadBlock.awardsCertificates
        </h6>
        <img
          alt="asset-name"
          class="AboutLeadBlock-image"
          src="http://localhost:8000/asset-real-file-name.pdf"
        />
        <img
          alt="asset-name"
          class="AboutLeadBlock-image"
          src="http://localhost:8000/asset-real-file-name.pdf"
        />
      </p>
      <p
        class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
        data-testid="typography"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-1wzmdv9-MuiTypography-root"
          data-testid="specification-section"
        >
          MC: sdp.leadBlock.specification
        </h6>
        <a
          class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1ga0prt-MuiButtonBase-root-MuiButton-root"
          data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"asset-name\\",\\"action\\":\\"http://localhost:8000/asset-real-file-name.pdf\\"}"
          href="http://localhost:8000/asset-real-file-name.pdf"
          rel="noopener noreferrer"
          tabindex="0"
          target="_blank"
        >
          asset-name
          <span
            class="MuiButton-endIcon MuiButton-iconSizeMedium css-9tj150-MuiButton-endIcon"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="LaunchIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </a>
      </p>
    </div>
  </div>
</div>
`;

exports[`AboutLeadBlock tests should not render if no specification asset 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-11fgxps-MuiGrid2-root"
    data-testid="grid-container"
  >
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-lg-8 MuiGrid2-grid-xs-12 css-vhjime-MuiGrid2-root"
      data-testid="grid-item"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
        data-testid="typography"
      >
        <div
          class="MuiTypography-root MuiTypography-body1  css-87ejlm-MuiTypography-root"
          data-testid="typography"
        >
          system-desc
        </div>
      </p>
      <p
        class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
        data-testid="typography"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-1wzmdv9-MuiTypography-root"
          data-testid="guarentees-section"
        >
          MC: pdp.leadBlock.guaranteesWarranties
        </h6>
        <img
          alt="asset-name"
          class="AboutLeadBlock-image"
          data-testid="guarantee-image-asset-name"
          src="http://localhost:8000/asset-real-file-name.pdf"
        />
      </p>
      <p
        class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
        data-testid="typography"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-1wzmdv9-MuiTypography-root"
          data-testid="awards-section"
        >
          MC: pdp.leadBlock.awardsCertificates
        </h6>
        <img
          alt="asset-name"
          class="AboutLeadBlock-image"
          src="http://localhost:8000/asset-real-file-name.pdf"
        />
        <img
          alt="asset-name"
          class="AboutLeadBlock-image"
          src="http://localhost:8000/asset-real-file-name.pdf"
        />
      </p>
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-lg-4 MuiGrid2-grid-xs-12 Grid-item css-abxfb-MuiGrid2-root"
      data-testid="sidebar"
    >
      <div
        class="ColorPair-pearl css-1pt14k0"
      >
        <div
          class="css-qtgtj9"
        >
          <div
            class="css-wepxue"
          >
            <h4
              class="MuiTypography-root MuiTypography-h4 Typography-underline css-1ekntu4-MuiTypography-root"
              data-testid="typography"
            >
              MC: sdp.leadBlock.systemBenefits
            </h4>
            <div
              class="css-1xaekgw"
            >
              <ul
                class="css-1err4t"
              />
            </div>
          </div>
          <div
            class="css-wepxue"
          >
            <h4
              class="MuiTypography-root MuiTypography-h4 Typography-underline css-1ekntu4-MuiTypography-root"
              data-testid="typography"
            >
              siderBarItem
            </h4>
            <div
              class="css-1xaekgw"
            >
              <div
                class="RichText-root css-17t4j5c"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AboutLeadBlock tests should not render if no systemBenefits 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-11fgxps-MuiGrid2-root"
    data-testid="grid-container"
  >
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-lg-8 MuiGrid2-grid-xs-12 css-vhjime-MuiGrid2-root"
      data-testid="grid-item"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
        data-testid="typography"
      >
        <div
          class="MuiTypography-root MuiTypography-body1  css-87ejlm-MuiTypography-root"
          data-testid="typography"
        >
          system-desc
        </div>
      </p>
      <p
        class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
        data-testid="typography"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-1wzmdv9-MuiTypography-root"
          data-testid="guarentees-section"
        >
          MC: pdp.leadBlock.guaranteesWarranties
        </h6>
        <img
          alt="asset-name"
          class="AboutLeadBlock-image"
          data-testid="guarantee-image-asset-name"
          src="http://localhost:8000/asset-real-file-name.pdf"
        />
      </p>
      <p
        class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
        data-testid="typography"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-1wzmdv9-MuiTypography-root"
          data-testid="awards-section"
        >
          MC: pdp.leadBlock.awardsCertificates
        </h6>
        <img
          alt="asset-name"
          class="AboutLeadBlock-image"
          src="http://localhost:8000/asset-real-file-name.pdf"
        />
        <img
          alt="asset-name"
          class="AboutLeadBlock-image"
          src="http://localhost:8000/asset-real-file-name.pdf"
        />
      </p>
      <p
        class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
        data-testid="typography"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-1wzmdv9-MuiTypography-root"
          data-testid="specification-section"
        >
          MC: sdp.leadBlock.specification
        </h6>
        <a
          class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1ga0prt-MuiButtonBase-root-MuiButton-root"
          data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"asset-name\\",\\"action\\":\\"http://localhost:8000/asset-real-file-name.pdf\\"}"
          href="http://localhost:8000/asset-real-file-name.pdf"
          rel="noopener noreferrer"
          tabindex="0"
          target="_blank"
        >
          asset-name
          <span
            class="MuiButton-endIcon MuiButton-iconSizeMedium css-9tj150-MuiButton-endIcon"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="LaunchIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </a>
      </p>
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-lg-4 MuiGrid2-grid-xs-12 Grid-item css-abxfb-MuiGrid2-root"
      data-testid="sidebar"
    >
      <div
        class="ColorPair-pearl css-1pt14k0"
      >
        <div
          class="css-qtgtj9"
        >
          <div
            class="css-wepxue"
          >
            <h4
              class="MuiTypography-root MuiTypography-h4 Typography-underline css-1ekntu4-MuiTypography-root"
              data-testid="typography"
            >
              siderBarItem
            </h4>
            <div
              class="css-1xaekgw"
            >
              <div
                class="RichText-root css-17t4j5c"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AboutLeadBlock tests should render 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-11fgxps-MuiGrid2-root"
    data-testid="grid-container"
  >
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-lg-8 MuiGrid2-grid-xs-12 css-vhjime-MuiGrid2-root"
      data-testid="grid-item"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
        data-testid="typography"
      >
        <div
          class="MuiTypography-root MuiTypography-body1  css-87ejlm-MuiTypography-root"
          data-testid="typography"
        >
          system-desc
        </div>
      </p>
      <p
        class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
        data-testid="typography"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-1wzmdv9-MuiTypography-root"
          data-testid="guarentees-section"
        >
          MC: pdp.leadBlock.guaranteesWarranties
        </h6>
        <img
          alt="asset-name"
          class="AboutLeadBlock-image"
          data-testid="guarantee-image-asset-name"
          src="http://localhost:8000/asset-real-file-name.pdf"
        />
      </p>
      <p
        class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
        data-testid="typography"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-1wzmdv9-MuiTypography-root"
          data-testid="awards-section"
        >
          MC: pdp.leadBlock.awardsCertificates
        </h6>
        <img
          alt="asset-name"
          class="AboutLeadBlock-image"
          src="http://localhost:8000/asset-real-file-name.pdf"
        />
        <img
          alt="asset-name"
          class="AboutLeadBlock-image"
          src="http://localhost:8000/asset-real-file-name.pdf"
        />
      </p>
      <p
        class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
        data-testid="typography"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-1wzmdv9-MuiTypography-root"
          data-testid="specification-section"
        >
          MC: sdp.leadBlock.specification
        </h6>
        <a
          class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1ga0prt-MuiButtonBase-root-MuiButton-root"
          data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"asset-name\\",\\"action\\":\\"http://localhost:8000/asset-real-file-name.pdf\\"}"
          href="http://localhost:8000/asset-real-file-name.pdf"
          rel="noopener noreferrer"
          tabindex="0"
          target="_blank"
        >
          asset-name
          <span
            class="MuiButton-endIcon MuiButton-iconSizeMedium css-9tj150-MuiButton-endIcon"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="LaunchIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </a>
      </p>
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-lg-4 MuiGrid2-grid-xs-12 Grid-item css-abxfb-MuiGrid2-root"
      data-testid="sidebar"
    >
      <div
        class="ColorPair-pearl css-1pt14k0"
      >
        <div
          class="css-qtgtj9"
        >
          <div
            class="css-wepxue"
          >
            <h4
              class="MuiTypography-root MuiTypography-h4 Typography-underline css-1ekntu4-MuiTypography-root"
              data-testid="typography"
            >
              MC: sdp.leadBlock.systemBenefits
            </h4>
            <div
              class="css-1xaekgw"
            >
              <ul
                class="css-1err4t"
              />
            </div>
          </div>
          <div
            class="css-wepxue"
          >
            <h4
              class="MuiTypography-root MuiTypography-h4 Typography-underline css-1ekntu4-MuiTypography-root"
              data-testid="typography"
            >
              siderBarItem
            </h4>
            <div
              class="css-1xaekgw"
            >
              <div
                class="RichText-root css-17t4j5c"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AboutLeadBlock tests specification section move up if no guaranteesAndWarranties assets and awardsAndCertificates assets 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-11fgxps-MuiGrid2-root"
    data-testid="grid-container"
  >
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-lg-8 MuiGrid2-grid-xs-12 css-vhjime-MuiGrid2-root"
      data-testid="grid-item"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
        data-testid="typography"
      >
        <div
          class="MuiTypography-root MuiTypography-body1  css-87ejlm-MuiTypography-root"
          data-testid="typography"
        >
          system-desc
        </div>
      </p>
      <p
        class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
        data-testid="typography"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-1wzmdv9-MuiTypography-root"
          data-testid="specification-section"
        >
          MC: sdp.leadBlock.specification
        </h6>
        <a
          class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1ga0prt-MuiButtonBase-root-MuiButton-root"
          data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"asset-name\\",\\"action\\":\\"http://localhost:8000/asset-real-file-name.pdf\\"}"
          href="http://localhost:8000/asset-real-file-name.pdf"
          rel="noopener noreferrer"
          tabindex="0"
          target="_blank"
        >
          asset-name
          <span
            class="MuiButton-endIcon MuiButton-iconSizeMedium css-9tj150-MuiButton-endIcon"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="LaunchIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </a>
      </p>
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-lg-4 MuiGrid2-grid-xs-12 Grid-item css-abxfb-MuiGrid2-root"
      data-testid="sidebar"
    >
      <div
        class="ColorPair-pearl css-1pt14k0"
      >
        <div
          class="css-qtgtj9"
        >
          <div
            class="css-wepxue"
          >
            <h4
              class="MuiTypography-root MuiTypography-h4 Typography-underline css-1ekntu4-MuiTypography-root"
              data-testid="typography"
            >
              MC: sdp.leadBlock.systemBenefits
            </h4>
            <div
              class="css-1xaekgw"
            >
              <ul
                class="css-1err4t"
              />
            </div>
          </div>
          <div
            class="css-wepxue"
          >
            <h4
              class="MuiTypography-root MuiTypography-h4 Typography-underline css-1ekntu4-MuiTypography-root"
              data-testid="typography"
            >
              siderBarItem
            </h4>
            <div
              class="css-1xaekgw"
            >
              <div
                class="RichText-root css-17t4j5c"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
